[package]
name = "daru_script"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "daru_script"
path = "src/lib.rs"

[[bin]]
name = "daru_script"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.20", features = ["derive"] }
